fixed font and input background color for chrome on mobile device, attempt

--- a/src/App.css
+++ b/src/App.css
@@ -194,6 +194,7 @@ body{
   max-width: 1350px;
   margin: auto;
   padding: 5rem 1.5rem;
+  color: var(--text-darker);
 }
 
 
@@ -447,6 +448,8 @@ h3{
   margin-bottom: 1.5rem;
   box-shadow: rgba(215,64,52, .15) 0 0 25px;
   padding: 0.5rem;
+  background-color: #fff;
+
 }
 
 .form textarea{
@@ -457,18 +460,20 @@ h3{
 
 #form--message{
   height: 6rem;
+  background-color: #fff;
 }
 
 .contact--email{
   display: flex;
   justify-content: center;
   grid-area: bottom;
-  padding: 2rem;
+  padding: 2rem 0;
   box-shadow: rgba(215,64,52, .3) 0 0 25px;
   border-radius: 20px;
   margin-top: 5rem;
   align-items: center;
   flex-wrap: wrap;
+
 }
 
 .contact--email h1{
